AP-963,AP-965,AP-978,AP-1002,Ipad alignment issue resolved for DSAR request table,consent tracking,resolved disabled property selection,dsarwebform reset button alignment issue resolved

--- a/src/app/privacy/dsar/dsar-requestdetails/dsar-requestdetails.component.scss
+++ b/src/app/privacy/dsar/dsar-requestdetails/dsar-requestdetails.component.scss
@@ -792,19 +792,19 @@ ul.ngx-pagination {
   }
 
   
-.form-check-inline:not(:first-child) {
+  .nav-tabs .form-check-inline:not(:first-child) {
     display: inline-block;
     /* margin: 0 2px 0 10px; */
     position: relative;
   }
   
 
-.form-check-inline input[type='radio'] {
+.nav-tabs .form-check-inline input[type='radio'] {
     margin: 3px 5px 0 0;
   }
 
   
-.form-check-inline input[type="radio"], .form-check-inline input[type="checkbox"] {
+.nav-tabs .form-check-inline input[type="radio"], .nav-tabs .form-check-inline input[type="checkbox"] {
     margin: 3px 5px 0 0;
     opacity: 0;
     display: none;
@@ -813,8 +813,8 @@ ul.ngx-pagination {
     top: 7px;
     left: 5px; */
   }
-  
-  .form-check-inline label {
+
+.nav-tabs .form-check-inline label {
       display: inline-block;
       background-color: #f5f5f5;
       padding: 5px 10px;
@@ -832,17 +832,17 @@ ul.ngx-pagination {
     cursor: pointer;
   }
   
-  .form-check-inline input[type="radio"]:focus + label, .form-check-inline input[type="checkbox"]:focus + label {
+  .nav-tabs .form-check-inline input[type="radio"]:focus + label, .nav-tabs .form-check-inline input[type="checkbox"]:focus + label {
       border: 1px solid #0168fa;
   }
   
-  .form-check-inline input[type="radio"]:checked + label, .form-check-inline input[type="checkbox"]:checked + label {
+  .nav-tabs .form-check-inline input[type="radio"]:checked + label, .nav-tabs .form-check-inline input[type="checkbox"]:checked + label {
       background-color: #4994fe;
       border-color: #0168fa;
       color: #fff;
   }
 
-  .form-check-inline label {
+  .nav-tabs .form-check-inline label {
     margin-right: 10px;
  }
 
@@ -894,4 +894,10 @@ ul.ngx-pagination {
 
 .btn-file:focus {
     outline: none;
+}
+
+@media(max-width:768px){
+.activitytab .nav-tabs .nav-link {
+    padding: 0 30px;
+  }
 }
