--- a/src/app/privacy/dsar/dsarform/dsarform.component.scss
+++ b/src/app/privacy/dsar/dsarform/dsarform.component.scss
@@ -1092,4 +1092,10 @@ span.previewbtn a {
   .publishwrapper .nav-tabs {
     width: 100% !important;
   }
+
+  .nav-tabs .nav-link {
+    padding: 0 15px;
+    background-color: chartreuse !important;
+  }
+
 }
